compiler/src/main/java/com/graduation/parse/compilerParser.java
// Generated from java-escape by ANTLR 4.11.1
package com.graduation.parse;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class compilerParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
			T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, WS = 14, OP_ID = 15, ID = 16, GUARD = 17,
			JAVA_CODE = 18;
	public static final int RULE_program = 0, RULE_option = 1, RULE_state_block = 2, RULE_state = 3,
			RULE_enter_block = 4, RULE_exit_block = 5, RULE_transition = 6, RULE_trigger = 7,
			RULE_param_list = 8, RULE_param = 9, RULE_type_id = 10;

	private static String[] makeRuleNames() {
		return new String[] {
				"program", "option", "state_block", "state", "enter_block", "exit_block",
				"transition", "trigger", "param_list", "param", "type_id"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'${{'", "','", "'}}$'", "'{'", "'}'", "'__enter__'", "'__exit__'",
				"'=>'", "'('", "')'", "':'", "'<'", "'>'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, "WS", "OP_ID", "ID", "GUARD", "JAVA_CODE"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "java-escape";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public compilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public OptionContext option;
		public List<OptionContext> options = new ArrayList<OptionContext>();

		public State_blockContext state_block() {
			return getRuleContext(State_blockContext.class, 0);
		}

		public TerminalNode EOF() {
			return getToken(compilerParser.EOF, 0);
		}

		public List<OptionContext> option() {
			return getRuleContexts(OptionContext.class);
		}

		public OptionContext option(int i) {
			return getRuleContext(OptionContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitProgram(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				{
					setState(25);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == OP_ID) {
						{
							{
								setState(22);
								((ProgramContext) _localctx).option = option();
								((ProgramContext) _localctx).options.add(((ProgramContext) _localctx).option);
							}
						}
						setState(27);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
				}
				setState(28);
				state_block();
				setState(29);
				match(EOF);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionContext extends ParserRuleContext {
		public Token name;
		public Token ID;
		public List<Token> values = new ArrayList<Token>();

		public TerminalNode OP_ID() {
			return getToken(compilerParser.OP_ID, 0);
		}

		public List<TerminalNode> ID() {
			return getTokens(compilerParser.ID);
		}

		public TerminalNode ID(int i) {
			return getToken(compilerParser.ID, i);
		}

		public OptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_option;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitOption(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final OptionContext option() throws RecognitionException {
		OptionContext _localctx = new OptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_option);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(31);
				((OptionContext) _localctx).name = match(OP_ID);
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						{
							setState(32);
							((OptionContext) _localctx).ID = match(ID);
							((OptionContext) _localctx).values.add(((OptionContext) _localctx).ID);
						}
					}
					setState(35);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while (_la == ID);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class State_blockContext extends ParserRuleContext {
		public StateContext state;
		public List<StateContext> states = new ArrayList<StateContext>();

		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}

		public StateContext state(int i) {
			return getRuleContext(StateContext.class, i);
		}

		public State_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_state_block;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitState_block(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final State_blockContext state_block() throws RecognitionException {
		State_blockContext _localctx = new State_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(37);
				match(T__0);
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == ID) {
					{
						setState(38);
						((State_blockContext) _localctx).state = state();
						((State_blockContext) _localctx).states.add(((State_blockContext) _localctx).state);
						setState(43);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__1) {
							{
								{
									setState(39);
									match(T__1);
									setState(40);
									((State_blockContext) _localctx).state = state();
									((State_blockContext) _localctx).states.add(((State_blockContext) _localctx).state);
								}
							}
							setState(45);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

				setState(48);
				match(T__2);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StateContext extends ParserRuleContext {
		public Token name;
		public Enter_blockContext enter;
		public Exit_blockContext exit;
		public TransitionContext transition;
		public List<TransitionContext> transitions = new ArrayList<TransitionContext>();

		public TerminalNode ID() {
			return getToken(compilerParser.ID, 0);
		}

		public Enter_blockContext enter_block() {
			return getRuleContext(Enter_blockContext.class, 0);
		}

		public Exit_blockContext exit_block() {
			return getRuleContext(Exit_blockContext.class, 0);
		}

		public List<TransitionContext> transition() {
			return getRuleContexts(TransitionContext.class);
		}

		public TransitionContext transition(int i) {
			return getRuleContext(TransitionContext.class, i);
		}

		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_state;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitState(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(50);
				((StateContext) _localctx).name = match(ID);
				setState(51);
				match(T__3);
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__5) {
					{
						setState(52);
						((StateContext) _localctx).enter = enter_block();
					}
				}

				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__6) {
					{
						setState(55);
						((StateContext) _localctx).exit = exit_block();
					}
				}

				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == ID) {
					{
						setState(58);
						((StateContext) _localctx).transition = transition();
						((StateContext) _localctx).transitions.add(((StateContext) _localctx).transition);
						setState(63);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__1) {
							{
								{
									setState(59);
									match(T__1);
									setState(60);
									((StateContext) _localctx).transition = transition();
									((StateContext) _localctx).transitions.add(((StateContext) _localctx).transition);
								}
							}
							setState(65);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

				setState(68);
				match(T__4);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Enter_blockContext extends ParserRuleContext {
		public Token code;

		public TerminalNode JAVA_CODE() {
			return getToken(compilerParser.JAVA_CODE, 0);
		}

		public Enter_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_enter_block;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitEnter_block(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Enter_blockContext enter_block() throws RecognitionException {
		Enter_blockContext _localctx = new Enter_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enter_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(70);
				match(T__5);
				setState(71);
				((Enter_blockContext) _localctx).code = match(JAVA_CODE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Exit_blockContext extends ParserRuleContext {
		public Token code;

		public TerminalNode JAVA_CODE() {
			return getToken(compilerParser.JAVA_CODE, 0);
		}

		public Exit_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_exit_block;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitExit_block(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Exit_blockContext exit_block() throws RecognitionException {
		Exit_blockContext _localctx = new Exit_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exit_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(73);
				match(T__6);
				setState(74);
				((Exit_blockContext) _localctx).code = match(JAVA_CODE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TransitionContext extends ParserRuleContext {
		public TriggerContext trig;
		public Token guard;
		public Token nextState;
		public Token code;

		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class, 0);
		}

		public TerminalNode ID() {
			return getToken(compilerParser.ID, 0);
		}

		public TerminalNode JAVA_CODE() {
			return getToken(compilerParser.JAVA_CODE, 0);
		}

		public TerminalNode GUARD() {
			return getToken(compilerParser.GUARD, 0);
		}

		public TransitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_transition;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitTransition(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TransitionContext transition() throws RecognitionException {
		TransitionContext _localctx = new TransitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_transition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(76);
				((TransitionContext) _localctx).trig = trigger();
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == GUARD) {
					{
						setState(77);
						((TransitionContext) _localctx).guard = match(GUARD);
					}
				}

				setState(80);
				match(T__7);
				setState(81);
				((TransitionContext) _localctx).nextState = match(ID);
				setState(82);
				((TransitionContext) _localctx).code = match(JAVA_CODE);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TriggerContext extends ParserRuleContext {
		public Token name;

		public TerminalNode ID() {
			return getToken(compilerParser.ID, 0);
		}

		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class, 0);
		}

		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_trigger;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitTrigger(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_trigger);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(84);
				((TriggerContext) _localctx).name = match(ID);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__8) {
					{
						setState(85);
						match(T__8);
						setState(86);
						param_list();
						setState(87);
						match(T__9);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Param_listContext extends ParserRuleContext {
		public ParamContext param;
		public List<ParamContext> params = new ArrayList<ParamContext>();

		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}

		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class, i);
		}

		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_param_list;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitParam_list(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == ID) {
					{
						setState(91);
						((Param_listContext) _localctx).param = param();
						((Param_listContext) _localctx).params.add(((Param_listContext) _localctx).param);
						setState(96);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__1) {
							{
								{
									setState(92);
									match(T__1);
									setState(93);
									((Param_listContext) _localctx).param = param();
									((Param_listContext) _localctx).params.add(((Param_listContext) _localctx).param);
								}
							}
							setState(98);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public Token name;
		public Type_idContext type;

		public TerminalNode ID() {
			return getToken(compilerParser.ID, 0);
		}

		public Type_idContext type_id() {
			return getRuleContext(Type_idContext.class, 0);
		}

		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_param;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitParam(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(101);
				((ParamContext) _localctx).name = match(ID);
				setState(102);
				match(T__10);
				setState(103);
				((ParamContext) _localctx).type = type_id();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_idContext extends ParserRuleContext {
		public TerminalNode ID() {
			return getToken(compilerParser.ID, 0);
		}

		public List<Type_idContext> type_id() {
			return getRuleContexts(Type_idContext.class);
		}

		public Type_idContext type_id(int i) {
			return getRuleContext(Type_idContext.class, i);
		}

		public Type_idContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_type_id;
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof compilerVisitor)
				return ((compilerVisitor<? extends T>) visitor).visitType_id(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Type_idContext type_id() throws RecognitionException {
		Type_idContext _localctx = new Type_idContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_type_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(105);
				match(ID);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la == T__11) {
					{
						setState(106);
						match(T__11);
						setState(107);
						type_id();
						setState(112);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == T__1) {
							{
								{
									setState(108);
									match(T__1);
									setState(109);
									type_id();
								}
							}
							setState(114);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(115);
						match(T__12);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}